fix tags, new audience room, starting audio mode
